finally getting the spacing correct with the different sections so they line up

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1299,7 +1299,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9a8b7cb', e
 
 .portfolio {
   margin-top: -100px;
-  margin-left: 80px;
+  /*margin-left: 80px;*/
   padding-top: 70px;
   padding-bottom: 70px;
   background-color: rgba(255, 255, 255, 0.9);
